--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,5 @@
 name: Deploy to GitHub Pages
 
-permissions:
-  contents: read
-  pages: write
-
 on:
   push:
     branches:
@@ -11,6 +7,8 @@ on:
 
 jobs:
   build-and-deploy:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
