--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build diagrams
+        run: npm run build-diagrams
+
       - name: Build
         run: npm run build
 
