ci: add build diagram step to the preview script

--- a/.github/preview.yaml
+++ b/.github/preview.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
+          npm run build-diagrams
           npm run build
 
       - name: Deploy preview
