--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -12,6 +12,7 @@ concurrency: preview-${{ github.ref }}
 
 jobs:
   deploy-preview:
+    permissions: write-all
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
