--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -13,7 +13,7 @@ concurrency: preview-${{ github.ref }}
 jobs:
   deploy-preview:
     permissions: write-all
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
