--- a/.github/workflows/preview.yaml
+++ b/.github/workflows/preview.yaml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npm install
           npm run build-diagrams
-          npm run build -- --base pr-preview/pr-${{ github.event.pull_request.number }}/
+          npm run build -- --base /pr-preview/pr-${{ github.event.pull_request.number }}/
 
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1
