--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,20 +17,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: true
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "18"
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build diagrams
-        run: npm run build-diagrams
-
-      - name: Build
-        run: npm run build
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build-diagrams
+          npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@4.1.4
