chore: CSV import script for Airtable data

--- a/package.json
+++ b/package.json
@@ -26,10 +26,19 @@
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
+    "csv-parser": "^3.0.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^8.0.0",
+    "js-yaml": "^4.1.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-to-png-converter": "^3.1.0",
     "postcss": "^8.4.32",
+    "sha": "^3.0.0",
+    "svg2png": "^4.1.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
