--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "localforage": "^1.10.0",
+    "markdown-it": "^14.0.0",
+    "markdown-it-katex": "^2.0.3",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,8 +39,8 @@
     "pdf-lib": "^1.17.1",
     "pdf-to-png-converter": "^3.1.0",
     "postcss": "^8.4.32",
-    "shikiji": "^0.9.9",
     "sha": "^3.0.0",
+    "shikiji": "^0.9.9",
     "svg2png": "^4.1.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
