--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "markdown-it": "^14.0.0",
     "markdown-it-katex": "^2.0.3",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/katex": "^0.16.7",
     "@types/markdown-it": "^13.0.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
