--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "katex": "^0.16.9",
     "localforage": "^1.10.0",
+    "markdown-it": "^14.0.0",
+    "markdown-it-katex": "^2.0.3",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +23,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/katex": "^0.16.7",
+    "@types/markdown-it": "^13.0.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -37,8 +42,8 @@
     "pdf-lib": "^1.17.1",
     "pdf-to-png-converter": "^3.1.0",
     "postcss": "^8.4.32",
-    "shikiji": "^0.9.9",
     "sha": "^3.0.0",
+    "shikiji": "^0.9.9",
     "svg2png": "^4.1.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
