--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "markdown-it": "^14.0.0",
     "markdown-it-katex": "^2.0.3",
     "match-sorter": "^6.3.1",
+    "minisearch": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
