--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "markdown-it-katex": "^2.0.3",
     "match-sorter": "^6.3.1",
     "minisearch": "^6.3.0",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
@@ -26,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/katex": "^0.16.7",
     "@types/markdown-it": "^13.0.7",
+    "@types/randomcolor": "^0.5.9",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
