--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
-    "vite-plugin-top-level-await": "^1.4.1"
+    "vite-plugin-top-level-await": "^1.4.1",
+    "zlib": "^1.0.5"
   }
 }
